fix(docs): hide TOC scrollbar on Firefox

--- a/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
+++ b/packages/theme-patternfly-org/components/tableOfContents/tableOfContents.css
@@ -29,6 +29,10 @@
   }
 }
 
+.ws-toc .pf-c-jump-links__main {
+  scrollbar-width: none;
+}
+
 /* Hide TOC scrollbar Chrome, Safari & Opera */
 .ws-toc .pf-c-jump-links__main::-webkit-scrollbar {
   display: none;
